# hdp_ki

./: README.md  pyproject.toml
vorschau/: 00_Das erste eigene Programm.ipynb  04_Model_Validation_Hyperparameters.ipynb  Evaluierung mit Python.ipynb  Klassifikation mit Scikit-Learn.ipynb  NLP.ipynb  Regression mit Scikit-Learn.ipynb  ann_cnn.ipynb
