[tool.poetry]
name = "ki-grundlagen-hdp-2023"
version = "0.1.0"
description = ""
authors = ["MaGeKo-Exxeta <matti.gerrit.korff@exxeta.com>"]
readme = "README.md"
packages = [{include = "ki_grundlagen_hdp_2023"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
matplotlib = "^3.7.2"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
seaborn = "^0.12.2"
nltk = "^3.8.1"
missingno = "^0.5.2"
plotly = "^5.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
